# project-templates

cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  bootstrap.bat
cpp/src/: dllmain.cpp
cpp/tools/libmaker/: MGLibMkr.ini
